--- a/app/Services/Web/resources/css/app.css
+++ b/app/Services/Web/resources/css/app.css
@@ -36,6 +36,8 @@ pre code.torchlight .summary-caret {
 
 .prose-lg {
     @apply prose-a:text-sky-600 prose-a:underline
+            prose-code:bg-slate-50 prose-code:text-rose-500 prose-code:py-0.5 prose-code:px-1 prose-code:rounded prose-code:inline-block prose-code:text-sm
+            prose-img:rounded-lg
 }
 
 @tailwind utilities;
