--- a/app/Services/Web/resources/css/app.css
+++ b/app/Services/Web/resources/css/app.css
@@ -34,10 +34,14 @@ pre code.torchlight .summary-caret {
     padding: 0;
 }
 
+.prose-lg :not(pre) > code {
+    @apply bg-slate-50 text-rose-500 py-0.5 px-1 rounded inline-block text-sm;
+}
+
 .prose-lg {
     @apply prose-a:text-sky-600 prose-a:underline
-            prose-code:bg-slate-50 prose-code:text-rose-500 prose-code:py-0.5 prose-code:px-1 prose-code:rounded prose-code:inline-block prose-code:text-sm
             prose-img:rounded-lg
+            prose-pre:px-0
 }
 
 @tailwind utilities;
