--- a/public/web/css/app.css
+++ b/public/web/css/app.css
@@ -1024,6 +1024,10 @@ pre code.torchlight .line-number, pre code.torchlight .summary-caret{
   margin-top: 0.75rem;
 }
 
+.mr-5{
+  margin-right: 1.25rem;
+}
+
 .block{
   display: block;
 }
@@ -1094,6 +1098,14 @@ pre code.torchlight .line-number, pre code.torchlight .summary-caret{
 
 .w-96{
   width: 24rem;
+}
+
+.w-20{
+  width: 5rem;
+}
+
+.w-16{
+  width: 4rem;
 }
 
 .max-w-full{
